--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Aggregator new based on preference",
   "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server.js"
+    "test": "mocha —-recursive test/**/*.test.js —-exit",
+    "start": "node src/server.js",
+    "test-coverage": "nyc npm run test"
   },
   "author": "Sachin Vedaraj",
   "license": "ISC",
@@ -13,15 +14,20 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "chai": "^4.3.7",
+    "chai-http": "^4.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "mocha": "^10.2.0",
     "morgan": "^1.10.0",
+    "sinon": "^15.2.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "nyc": "^15.1.0"
   }
 }
