--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.1",
+    "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mocha": "^10.2.0",
     "morgan": "^1.10.0",
     "sinon": "^15.2.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
